# makefile-sp-lab2

./: .gitignore  CMakeLists.txt  Makefile  script.sh
src/: main.cpp
